syntax = "proto3";

// package
option go_package = "github.com/pitipon/shop-microservices";


// structure

message CredentialSearchReq {
    string accessToken = 1;
}

message CredentialSearchRes {
    bool isValid = 1;
}

message RolesCountReq {}

message RolesCountRes {
    int64 count = 1;
}

// Methods
service AuthGrpcService {
    rpc CredentialSearch(CredentialSearchReq) returns (CredentialSearchRes);
    rpc RolesCount(RolesCountReq) returns (RolesCountRes);
}

